yellow/templates/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow-website
  labels:
    app: yellow-website
    color: yellow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: yellow-website
      color: yellow
  template:
    metadata:
      labels:
        app: yellow-website
        color: yellow
    spec:
      containers:
        - name: yellow
          image: "lukaosmani/website-yellow:v1.0.0"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
